--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container header-content">
             <img src="images/logo2.png" alt="Logo do Consultório Odontológico" class="logo">
-            <h1>Consultório Odontológico atualizando</h1>
+            <h1>Consultório Odontológico</h1>
             <button id="menu-toggle" class="menu-toggle">
                 <i class="fas fa-bars"></i>
             </button>
