--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consultório Odontológico - Sobre</title>
-    <link rel="stylesheet" href="arquivos.css/styles.css">
+    <link rel="stylesheet" href="arquivos.css/botoes.css">
+    <link rel="stylesheet" href="arquivos.css/cabecalho.css">
+    <link rel="stylesheet" href="arquivos.css/card.css">
+    <link rel="stylesheet" href="arquivos.css/geral.css">
+    <link rel="stylesheet" href="arquivos.css/menu.css">
+    <link rel="stylesheet" href="arquivos.css/responsivo.css">
+    <link rel="stylesheet" href="arquivos.css/secoes.css">
+    <link rel="stylesheet" href="arquivos.css/slideshow.css">
+    <link rel="stylesheet" href="arquivos.css/vermais.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
